# Neural-Control-with-Adaptive-State-Estimation

./: .gitignore  CONTRIBUTING.md  ExampleDataset.npy  ExampleDataset.npy:Zone.Identifier  Illustrator.py  README.md  Simulator.py  Test_Illustrator.py  introduction_control.ipynb  introduction_filtering.ipynb  pyproject.toml  week1.ipynb  week2.ipynb  week2.ipynb:Zone.Identifier
.github/workflows/: docs.yml
docs/: Makefile
docs/source/: architecture.md  composing_inputs.md  conf.py  index.md
docs/source/api/: analysis.md  dataset.md  illustrator.md  inputs.md  simulator.md
src/intro/: introduction.ipynb  introduction_control.ipynb  introduction_filtering.ipynb
src/l4b/: __init__.py  illustrator.py  inputs.py  simulator.py
src/l4b/simulation/: __init__.py  analysis.py  controllability_gramian.py  eigen_spectrum.py  eigenpairs.py  gramian_analysis.py  observability_gramian.py  simulator.py  spectrum.py
src/l4b/stats/: __init__.py  analysis.py  autocorrelation.py  coherence.py  correlation.py  cross_correlation.py  mean.py  pca.py  power_spectrum.py
src/neural_control_with_adaptive_state_estimation/: __init__.py
src/week_1/: Illustrator.py  analysis.py  autocorrelation.py  coherence.py  correlation.py  cross_correlation.py  dataset.py  illustrator.py  inputs.py  kalman.py  mean.py  pca.py  population_mean.py  power_spectrum.py  sim_tinkering.py  simulator.py  test_illustrator.py  test_sim.py  week1.ipynb
src/week_2/: week2.ipynb
